@@ -78,6 +78,10 @@ else
 AP2_CONFLAGS += -O2
 endif
 
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+DEB_BUILD_STRIP = yes
+endif
+
 BUILD=debian/build-tree
 REALCURDIR=$(CURDIR)
 INSTALL=/usr/bin/install
@@ -212,6 +216,12 @@ install: build install-worker install-prefork install-common install-dev install
 		mkdir -p debian/apache2-mpm-$$i/usr/sbin ;\
 		mkdir -p debian/apache2-mpm-$$i/usr/share/lintian/overrides ;\
 		install -m 755 $(BUILD)/$$i/apache2 debian/apache2-mpm-$$i/usr/sbin/apache2 ;\
+		if [ -n "$(DEB_BUILD_STRIP)" ] ; then \
+			objcopy --only-keep-debug debian/apache2-mpm-$$i/usr/sbin/apache2 debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i ;\
+			chmod 644 debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i ;\
+			dh_strip -papache2-mpm-$$i ;\
+			objcopy --add-gnu-debuglink=debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i debian/apache2-mpm-$$i/usr/sbin/apache2 ;\
+		fi ;\
 		install -m644 debian/mpms.lintian-overrides debian/apache2-mpm-$$i/usr/share/lintian/overrides/apache2-mpm-$$i ;\
 	done
 
@@ -244,9 +254,11 @@ binary-arch: install
 	dh_installdocs -a
 	dh_installman -a
 	dh_installchangelogs -a CHANGES
+	rm -f debian/apache2-dbg/usr/share/doc/apache2-dbg/changelog
+	rm -f debian/apache2-dbg/usr/share/doc/apache2-dbg/NEWS.Debian
 	dh_installinit -a -r --name=apache2 debian/apache2.2-common.init.d -- start 91 09
 	dh_installcron -a -r --name=apache2
-	dh_strip -a
+	dh_strip -a --dbg-package=apache2-dbg -Napache2-mpm-worker -Napache2-mpm-event -Napache2-mpm-prefork -Napache2-dbg
 	dh_link -a
 	dh_compress -a
 	dh_fixperms -a -Xsuexec
